[package]
name = "autoscale-fut"
version = "0.1.0"
authors = ["Dennis Dietrich <d.dietrich84@gmail.com>"]

[dependencies]
log = "0.3"
env_logger = "0.3"
curl = "0.3.6"
futures = "0.1"
tokio-core = "0.1"
tokio-curl = "0.1"
tokio-service = { git = "https://github.com/tokio-rs/tokio-service", rev = "da47a93" }
rustc-serialize = "0.3"
chrono = "0.2"
url = "1.2"
