[package]
name = "blah-autoscale"
version = "0.1.0"
authors = ["Dennis Dietrich <d.dietrich84@gmail.com>"]

[dependencies]
log = "0.3"
env_logger = "0.3"
getopts = "0.2"
curl = "0.4"
futures = "0.1"
tokio-core = "0.1"
tokio-curl = "0.1"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
logstash-format = { git = "https://github.com/dennis84/logstash-format.git" }
