[package]
name = "blah-data"
version = "0.1.0"
authors = ["Dennis Dietrich <d.dietrich84@gmail.com>"]

[dependencies]
log = "0.3"
env_logger = "0.4"
getopts = "0.2"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
futures = "0.1"
rdkafka = "0.7"
postgres = { version = "0.14", features = ["with-serde_json", "with-chrono"] }
r2d2 = "0.7.1"
r2d2_postgres = "0.12.0"
chrono = "0.3.0"
tokio-core = "0.1"
hyper = { git = "https://github.com/hyperium/hyper.git" }
logstash-format = { git = "https://github.com/dennis84/logstash-format.git" }
